modified:   Code/.DS_Store 	modified:   Code/00_data_stock_returns.ipynb 	modified:   Code/01_data_factors_rf_mkt.ipynb 	modified:   Code/02_data_indecies.ipynb 	modified:   Code/03_finalizing_data.ipynb 	modified:   Code/10_umd_replication.ipynb 	modified:   Code/11_bab_replication.ipynb 	modified:   Code/12_pre_data_statistics.ipynb 	modified:   Code/20_volatility_managed_factors.ipynb 	modified:   Code/21_volatility_managed_portfolios.ipynb 	modified:   Code/22_volatility_statistics.ipynb 	modified:   Code/30_data_statistics.ipynb 	modified:   Code/99_functions.ipynb 	modified:   Code/99_run_all.ipynb 	deleted:    Code/Old code/old 00_data_manipulation.ipynb 	deleted:    Code/Old code/old 00_data_stock_returns.ipynb 	deleted:    Code/Old code/old 01_bab_replication.ipynb 	modified:   Code/Plots/.DS_Store 	new file:   Code/Plots/cumulative_returns_factors.png 	new file:   Code/Plots/cumulative_returns_ptfs.png 	new file:   Code/Plots/drawdowns_MV.png 	new file:   Code/Plots/drawdowns_orginal_factors.png 	new file:   Code/Plots/drawdowns_voltimed_factors.png 	new file:   Code/Plots/drawdowns_voltimed_factors_mkt.png 	new file:   Code/Plots/histograms.png 	modified:   Code/Plots/histograms_voltimed_factors_mkt.png

--- a/Code/01_data_factors_rf_mkt.ipynb
+++ b/Code/01_data_factors_rf_mkt.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "d2dd9378",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:05.020479Z",
-     "iopub.status.busy": "2025-03-04T15:20:05.020013Z",
-     "iopub.status.idle": "2025-03-04T15:20:05.718540Z",
-     "shell.execute_reply": "2025-03-04T15:20:05.718289Z"
+     "iopub.execute_input": "2025-03-13T16:20:24.659100Z",
+     "iopub.status.busy": "2025-03-13T16:20:24.658674Z",
+     "iopub.status.idle": "2025-03-13T16:20:25.195366Z",
+     "shell.execute_reply": "2025-03-13T16:20:25.195112Z"
     },
     "papermill": {
-     "duration": 0.702652,
-     "end_time": "2025-03-04T15:20:05.719395",
+     "duration": 0.543569,
+     "end_time": "2025-03-13T16:20:25.196241",
      "exception": false,
-     "start_time": "2025-03-04T15:20:05.016743",
+     "start_time": "2025-03-13T16:20:24.652672",
      "status": "completed"
     },
     "tags": []
@@ -46,25 +46,25 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "### Setting working directory\n",
-    "os.chdir('/Users/emilwilliamhansen/Library/Mobile Documents/com~apple~CloudDocs/School/Master Thesis/Code')"
+    "os.chdir('/Users/emilwilliamhansen/Desktop/Master-Thesis/Code')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "a39fabbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:05.721721Z",
-     "iopub.status.busy": "2025-03-04T15:20:05.721557Z",
-     "iopub.status.idle": "2025-03-04T15:20:05.737592Z",
-     "shell.execute_reply": "2025-03-04T15:20:05.737349Z"
+     "iopub.execute_input": "2025-03-13T16:20:25.198650Z",
+     "iopub.status.busy": "2025-03-13T16:20:25.198487Z",
+     "iopub.status.idle": "2025-03-13T16:20:25.215830Z",
+     "shell.execute_reply": "2025-03-13T16:20:25.215600Z"
     },
     "papermill": {
-     "duration": 0.017922,
-     "end_time": "2025-03-04T15:20:05.738401",
+     "duration": 0.019194,
+     "end_time": "2025-03-13T16:20:25.216646",
      "exception": false,
-     "start_time": "2025-03-04T15:20:05.720479",
+     "start_time": "2025-03-13T16:20:25.197452",
      "status": "completed"
     },
     "tags": []
@@ -99,20 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "a98a4fb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:05.740027Z",
-     "iopub.status.busy": "2025-03-04T15:20:05.739914Z",
-     "iopub.status.idle": "2025-03-04T15:20:05.754391Z",
-     "shell.execute_reply": "2025-03-04T15:20:05.754140Z"
+     "iopub.execute_input": "2025-03-13T16:20:25.218329Z",
+     "iopub.status.busy": "2025-03-13T16:20:25.218221Z",
+     "iopub.status.idle": "2025-03-13T16:20:25.233456Z",
+     "shell.execute_reply": "2025-03-13T16:20:25.233196Z"
     },
     "papermill": {
-     "duration": 0.016038,
-     "end_time": "2025-03-04T15:20:05.755080",
+     "duration": 0.016848,
+     "end_time": "2025-03-13T16:20:25.234163",
      "exception": false,
-     "start_time": "2025-03-04T15:20:05.739042",
+     "start_time": "2025-03-13T16:20:25.217315",
      "status": "completed"
     },
     "tags": []
@@ -147,20 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "e1cc3eec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:05.756754Z",
-     "iopub.status.busy": "2025-03-04T15:20:05.756655Z",
-     "iopub.status.idle": "2025-03-04T15:20:05.765874Z",
-     "shell.execute_reply": "2025-03-04T15:20:05.765629Z"
+     "iopub.execute_input": "2025-03-13T16:20:25.235861Z",
+     "iopub.status.busy": "2025-03-13T16:20:25.235764Z",
+     "iopub.status.idle": "2025-03-13T16:20:25.244916Z",
+     "shell.execute_reply": "2025-03-13T16:20:25.244593Z"
     },
     "papermill": {
-     "duration": 0.01088,
-     "end_time": "2025-03-04T15:20:05.766644",
+     "duration": 0.01076,
+     "end_time": "2025-03-13T16:20:25.245647",
      "exception": false,
-     "start_time": "2025-03-04T15:20:05.755764",
+     "start_time": "2025-03-13T16:20:25.234887",
      "status": "completed"
     },
     "tags": []
@@ -195,20 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "0d4f6335",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:05.768449Z",
-     "iopub.status.busy": "2025-03-04T15:20:05.768333Z",
-     "iopub.status.idle": "2025-03-04T15:20:05.831653Z",
-     "shell.execute_reply": "2025-03-04T15:20:05.831382Z"
+     "iopub.execute_input": "2025-03-13T16:20:25.247473Z",
+     "iopub.status.busy": "2025-03-13T16:20:25.247256Z",
+     "iopub.status.idle": "2025-03-13T16:20:25.335177Z",
+     "shell.execute_reply": "2025-03-13T16:20:25.334950Z"
     },
     "papermill": {
-     "duration": 0.065101,
-     "end_time": "2025-03-04T15:20:05.832483",
+     "duration": 0.089658,
+     "end_time": "2025-03-13T16:20:25.335983",
      "exception": false,
-     "start_time": "2025-03-04T15:20:05.767382",
+     "start_time": "2025-03-13T16:20:25.246325",
      "status": "completed"
     },
     "tags": []
@@ -247,14 +247,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.917745,
-   "end_time": "2025-03-04T15:20:06.049771",
+   "duration": 1.767978,
+   "end_time": "2025-03-13T16:20:25.553488",
    "environment_variables": {},
    "exception": null,
    "input_path": "01_data_factors_rf_mkt.ipynb",
    "output_path": "01_data_factors_rf_mkt.ipynb",
    "parameters": {},
-   "start_time": "2025-03-04T15:20:04.132026",
+   "start_time": "2025-03-13T16:20:23.785510",
    "version": "2.6.0"
   }
  },
