--- a/Code/03_finalizing_data.ipynb
+++ b/Code/03_finalizing_data.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "f579ecf7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:08.840143Z",
-     "iopub.status.busy": "2025-03-04T15:20:08.839788Z",
-     "iopub.status.idle": "2025-03-04T15:20:09.054539Z",
-     "shell.execute_reply": "2025-03-04T15:20:09.054291Z"
+     "iopub.execute_input": "2025-03-13T16:20:27.941499Z",
+     "iopub.status.busy": "2025-03-13T16:20:27.941142Z",
+     "iopub.status.idle": "2025-03-13T16:20:28.154419Z",
+     "shell.execute_reply": "2025-03-13T16:20:28.154054Z"
     },
     "papermill": {
-     "duration": 0.224711,
-     "end_time": "2025-03-04T15:20:09.055421",
+     "duration": 0.221763,
+     "end_time": "2025-03-13T16:20:28.155506",
      "exception": false,
-     "start_time": "2025-03-04T15:20:08.830710",
+     "start_time": "2025-03-13T16:20:27.933743",
      "status": "completed"
     },
     "tags": []
@@ -46,7 +46,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "### Setting working directory\n",
-    "os.chdir('/Users/emilwilliamhansen/Library/Mobile Documents/com~apple~CloudDocs/School/Master Thesis/Code')"
+    "os.chdir('/Users/emilwilliamhansen/Desktop/Master-Thesis/Code')"
    ]
   },
   {
@@ -54,10 +54,10 @@
    "id": "aa1e5dcd",
    "metadata": {
     "papermill": {
-     "duration": 0.001731,
-     "end_time": "2025-03-04T15:20:09.058676",
+     "duration": 0.0024,
+     "end_time": "2025-03-13T16:20:28.160300",
      "exception": false,
-     "start_time": "2025-03-04T15:20:09.056945",
+     "start_time": "2025-03-13T16:20:28.157900",
      "status": "completed"
     },
     "tags": []
@@ -70,20 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "56bf5db4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:09.061234Z",
-     "iopub.status.busy": "2025-03-04T15:20:09.060988Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.845276Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.844920Z"
+     "iopub.execute_input": "2025-03-13T16:20:28.164278Z",
+     "iopub.status.busy": "2025-03-13T16:20:28.163678Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.699558Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.699251Z"
     },
     "papermill": {
-     "duration": 2.788811,
-     "end_time": "2025-03-04T15:20:11.848494",
+     "duration": 2.538933,
+     "end_time": "2025-03-13T16:20:30.700417",
      "exception": false,
-     "start_time": "2025-03-04T15:20:09.059683",
+     "start_time": "2025-03-13T16:20:28.161484",
      "status": "completed"
     },
     "tags": []
@@ -122,10 +122,10 @@
    "id": "4dd26ae0",
    "metadata": {
     "papermill": {
-     "duration": 0.001847,
-     "end_time": "2025-03-04T15:20:11.853397",
+     "duration": 0.001267,
+     "end_time": "2025-03-13T16:20:30.704680",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.851550",
+     "start_time": "2025-03-13T16:20:30.703413",
      "status": "completed"
     },
     "tags": []
@@ -136,20 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "cfe27bb7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.858126Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.857959Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.878778Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.878505Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.707084Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.706952Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.722168Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.721910Z"
     },
     "papermill": {
-     "duration": 0.024704,
-     "end_time": "2025-03-04T15:20:11.879927",
+     "duration": 0.017256,
+     "end_time": "2025-03-13T16:20:30.722907",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.855223",
+     "start_time": "2025-03-13T16:20:30.705651",
      "status": "completed"
     },
     "tags": []
@@ -178,10 +178,10 @@
    "id": "8d0b1371",
    "metadata": {
     "papermill": {
-     "duration": 0.001338,
-     "end_time": "2025-03-04T15:20:11.882868",
+     "duration": 0.000949,
+     "end_time": "2025-03-13T16:20:30.724987",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.881530",
+     "start_time": "2025-03-13T16:20:30.724038",
      "status": "completed"
     },
     "tags": []
@@ -192,20 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "5f24723a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.885813Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.885665Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.888501Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.887908Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.727246Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.727138Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.729048Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.728853Z"
     },
     "papermill": {
-     "duration": 0.00531,
-     "end_time": "2025-03-04T15:20:11.889338",
+     "duration": 0.003844,
+     "end_time": "2025-03-13T16:20:30.729708",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.884028",
+     "start_time": "2025-03-13T16:20:30.725864",
      "status": "completed"
     },
     "tags": []
@@ -234,10 +234,10 @@
    "id": "cc242827",
    "metadata": {
     "papermill": {
-     "duration": 0.001123,
-     "end_time": "2025-03-04T15:20:11.892142",
+     "duration": 0.000937,
+     "end_time": "2025-03-13T16:20:30.731743",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.891019",
+     "start_time": "2025-03-13T16:20:30.730806",
      "status": "completed"
     },
     "tags": []
@@ -248,20 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "9e4d45c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.894777Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.894592Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.901892Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.901602Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.734058Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.733960Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.740080Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.739831Z"
     },
     "papermill": {
-     "duration": 0.009681,
-     "end_time": "2025-03-04T15:20:11.902789",
+     "duration": 0.008171,
+     "end_time": "2025-03-13T16:20:30.740842",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.893108",
+     "start_time": "2025-03-13T16:20:30.732671",
      "status": "completed"
     },
     "tags": []
@@ -292,10 +292,10 @@
    "id": "0453987d",
    "metadata": {
     "papermill": {
-     "duration": 0.001142,
-     "end_time": "2025-03-04T15:20:11.905747",
+     "duration": 0.000948,
+     "end_time": "2025-03-13T16:20:30.742897",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.904605",
+     "start_time": "2025-03-13T16:20:30.741949",
      "status": "completed"
     },
     "tags": []
@@ -306,20 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "2ce2194b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.908515Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.908362Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.910476Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.910274Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.745241Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.745108Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.747007Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.746817Z"
     },
     "papermill": {
-     "duration": 0.004268,
-     "end_time": "2025-03-04T15:20:11.911149",
+     "duration": 0.003813,
+     "end_time": "2025-03-13T16:20:30.747656",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.906881",
+     "start_time": "2025-03-13T16:20:30.743843",
      "status": "completed"
     },
     "tags": []
@@ -349,20 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "5394b7ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.914897Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.914759Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.917732Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.917473Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.749938Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.749845Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.752148Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.751951Z"
     },
     "papermill": {
-     "duration": 0.005703,
-     "end_time": "2025-03-04T15:20:11.918455",
+     "duration": 0.004152,
+     "end_time": "2025-03-13T16:20:30.752786",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.912752",
+     "start_time": "2025-03-13T16:20:30.748634",
      "status": "completed"
     },
     "tags": []
@@ -377,20 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "6229905a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.921643Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.921511Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.924148Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.923896Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.755344Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.755228Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.757142Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.756913Z"
     },
     "papermill": {
-     "duration": 0.004976,
-     "end_time": "2025-03-04T15:20:11.924847",
+     "duration": 0.004051,
+     "end_time": "2025-03-13T16:20:30.757794",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.919871",
+     "start_time": "2025-03-13T16:20:30.753743",
      "status": "completed"
     },
     "tags": []
@@ -420,20 +420,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "bc2b5b80",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.928206Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.928059Z",
-     "iopub.status.idle": "2025-03-04T15:20:11.937776Z",
-     "shell.execute_reply": "2025-03-04T15:20:11.937474Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.760221Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.760132Z",
+     "iopub.status.idle": "2025-03-13T16:20:30.767589Z",
+     "shell.execute_reply": "2025-03-13T16:20:30.767337Z"
     },
     "papermill": {
-     "duration": 0.012525,
-     "end_time": "2025-03-04T15:20:11.938608",
+     "duration": 0.009504,
+     "end_time": "2025-03-13T16:20:30.768368",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.926083",
+     "start_time": "2025-03-13T16:20:30.758864",
      "status": "completed"
     },
     "tags": []
@@ -451,10 +451,10 @@
    "id": "84c22523",
    "metadata": {
     "papermill": {
-     "duration": 0.001083,
-     "end_time": "2025-03-04T15:20:11.940970",
+     "duration": 0.000996,
+     "end_time": "2025-03-13T16:20:30.770531",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.939887",
+     "start_time": "2025-03-13T16:20:30.769535",
      "status": "completed"
     },
     "tags": []
@@ -465,20 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "7c87f0c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:11.943910Z",
-     "iopub.status.busy": "2025-03-04T15:20:11.943721Z",
-     "iopub.status.idle": "2025-03-04T15:20:16.461492Z",
-     "shell.execute_reply": "2025-03-04T15:20:16.460729Z"
+     "iopub.execute_input": "2025-03-13T16:20:30.773260Z",
+     "iopub.status.busy": "2025-03-13T16:20:30.773136Z",
+     "iopub.status.idle": "2025-03-13T16:20:34.600222Z",
+     "shell.execute_reply": "2025-03-13T16:20:34.599873Z"
     },
     "papermill": {
-     "duration": 4.521621,
-     "end_time": "2025-03-04T15:20:16.463665",
+     "duration": 3.829481,
+     "end_time": "2025-03-13T16:20:34.601064",
      "exception": false,
-     "start_time": "2025-03-04T15:20:11.942044",
+     "start_time": "2025-03-13T16:20:30.771583",
      "status": "completed"
     },
     "tags": []
@@ -490,7 +490,6 @@
     "\n",
     "monthly_returns.to_sql('monthly_returns', conn, if_exists='replace')\n",
     "daily_returns.to_sql('daily_returns', conn, if_exists='replace')\n",
-    "\n",
     "\n",
     "filtered_monthly_returns.to_sql('filtered_monthly_returns', conn, if_exists='replace')\n",
     "filtered_daily_returns.to_sql('filtered_daily_returns', conn, if_exists='replace')\n",
@@ -530,14 +529,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.588945,
-   "end_time": "2025-03-04T15:20:16.688071",
+   "duration": 7.408748,
+   "end_time": "2025-03-13T16:20:34.819460",
    "environment_variables": {},
    "exception": null,
    "input_path": "03_finalizing_data.ipynb",
    "output_path": "03_finalizing_data.ipynb",
    "parameters": {},
-   "start_time": "2025-03-04T15:20:08.099126",
+   "start_time": "2025-03-13T16:20:27.410712",
    "version": "2.6.0"
   }
  },
