--- a/Code/10_umd_replication.ipynb
+++ b/Code/10_umd_replication.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "14bf0acd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:17.253553Z",
-     "iopub.status.busy": "2025-03-04T15:20:17.253321Z",
-     "iopub.status.idle": "2025-03-04T15:20:17.961014Z",
-     "shell.execute_reply": "2025-03-04T15:20:17.960720Z"
+     "iopub.execute_input": "2025-03-13T16:20:35.529664Z",
+     "iopub.status.busy": "2025-03-13T16:20:35.529066Z",
+     "iopub.status.idle": "2025-03-13T16:20:36.209002Z",
+     "shell.execute_reply": "2025-03-13T16:20:36.208712Z"
     },
     "papermill": {
-     "duration": 0.711367,
-     "end_time": "2025-03-04T15:20:17.961912",
+     "duration": 0.689837,
+     "end_time": "2025-03-13T16:20:36.209881",
      "exception": false,
-     "start_time": "2025-03-04T15:20:17.250545",
+     "start_time": "2025-03-13T16:20:35.520044",
      "status": "completed"
     },
     "tags": []
@@ -34,6 +34,7 @@
     "import numpy as np    # For numerical computing\n",
     "import pandas as pd   # For data manipulation\n",
     "import sqlite3        # For connecting to SQL database\n",
+    "import os\n",
     "from scipy.stats.mstats import winsorize\n",
     "\n",
     "\n",
@@ -42,26 +43,29 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "### Pandas display options\n",
-    "pd.options.display.float_format = '{:.4f}'.format"
+    "pd.options.display.float_format = '{:.4f}'.format\n",
+    "\n",
+    "### Setting working directory\n",
+    "os.chdir('/Users/emilwilliamhansen/Desktop/Master-Thesis/Code')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "e890ff45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:17.965406Z",
-     "iopub.status.busy": "2025-03-04T15:20:17.965232Z",
-     "iopub.status.idle": "2025-03-04T15:20:19.172422Z",
-     "shell.execute_reply": "2025-03-04T15:20:19.172137Z"
+     "iopub.execute_input": "2025-03-13T16:20:36.213003Z",
+     "iopub.status.busy": "2025-03-13T16:20:36.212814Z",
+     "iopub.status.idle": "2025-03-13T16:20:36.377858Z",
+     "shell.execute_reply": "2025-03-13T16:20:36.377321Z"
     },
     "papermill": {
-     "duration": 1.210289,
-     "end_time": "2025-03-04T15:20:19.173638",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:17.963349",
-     "status": "completed"
+     "duration": 0.16723,
+     "end_time": "2025-03-13T16:20:36.378573",
+     "exception": true,
+     "start_time": "2025-03-13T16:20:36.211343",
+     "status": "failed"
     },
     "tags": []
    },
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "4482448a",
    "metadata": {
     "execution": {
@@ -98,11 +102,11 @@
      "shell.execute_reply": "2025-03-04T15:20:19.463928Z"
     },
     "papermill": {
-     "duration": 0.290319,
-     "end_time": "2025-03-04T15:20:19.465321",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:19.175002",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "76c79cae",
    "metadata": {
     "execution": {
@@ -124,11 +128,11 @@
      "shell.execute_reply": "2025-03-04T15:20:19.471057Z"
     },
     "papermill": {
-     "duration": 0.005677,
-     "end_time": "2025-03-04T15:20:19.472295",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:19.466618",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "2ab7979f",
    "metadata": {
     "execution": {
@@ -149,11 +153,11 @@
      "shell.execute_reply": "2025-03-04T15:20:19.477923Z"
     },
     "papermill": {
-     "duration": 0.005693,
-     "end_time": "2025-03-04T15:20:19.479026",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:19.473333",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -203,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "cac2d0b7",
    "metadata": {
     "execution": {
@@ -213,11 +217,11 @@
      "shell.execute_reply": "2025-03-04T15:20:21.407575Z"
     },
     "papermill": {
-     "duration": 1.930278,
-     "end_time": "2025-03-04T15:20:21.410236",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:19.479958",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "c300282a",
    "metadata": {
     "execution": {
@@ -242,11 +246,11 @@
      "shell.execute_reply": "2025-03-04T15:20:21.421126Z"
     },
     "papermill": {
-     "duration": 0.008684,
-     "end_time": "2025-03-04T15:20:21.422156",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:21.413472",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "eeecafc9",
    "metadata": {
     "execution": {
@@ -280,11 +284,11 @@
      "shell.execute_reply": "2025-03-04T15:20:23.231192Z"
     },
     "papermill": {
-     "duration": 1.810129,
-     "end_time": "2025-03-04T15:20:23.233454",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:21.423325",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -307,7 +311,7 @@
        "Length: 11041, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "b8408eec",
    "metadata": {
     "execution": {
@@ -335,11 +339,11 @@
      "shell.execute_reply": "2025-03-04T15:20:23.239380Z"
     },
     "papermill": {
-     "duration": 0.004373,
-     "end_time": "2025-03-04T15:20:23.240243",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:23.235870",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -359,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "183786bf",
    "metadata": {
     "execution": {
@@ -369,11 +373,11 @@
      "shell.execute_reply": "2025-03-04T15:20:23.283963Z"
     },
     "papermill": {
-     "duration": 0.043908,
-     "end_time": "2025-03-04T15:20:23.285093",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:23.241185",
-     "status": "completed"
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "pending"
     },
     "tags": []
    },
@@ -412,14 +416,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.101876,
-   "end_time": "2025-03-04T15:20:23.807067",
+   "duration": 1.761375,
+   "end_time": "2025-03-13T16:20:36.596394",
    "environment_variables": {},
-   "exception": null,
+   "exception": true,
    "input_path": "10_umd_replication.ipynb",
    "output_path": "10_umd_replication.ipynb",
    "parameters": {},
-   "start_time": "2025-03-04T15:20:16.705191",
+   "start_time": "2025-03-13T16:20:34.835019",
    "version": "2.6.0"
   }
  },
