--- a/Code/11_bab_replication.ipynb
+++ b/Code/11_bab_replication.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f56ead0d",
    "metadata": {
     "execution": {
@@ -34,18 +34,22 @@
     "import numpy as np    # For numerical computing\n",
     "import pandas as pd   # For data manipulation\n",
     "import sqlite3        # For connecting to SQL database\n",
+    "import os\n",
     "\n",
     "### Ignoring the warnings\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "### Pandas display options\n",
-    "pd.options.display.float_format = '{:.4f}'.format"
+    "pd.options.display.float_format = '{:.4f}'.format\n",
+    "\n",
+    "### Setting working directory\n",
+    "os.chdir('/Users/emilwilliamhansen/Desktop/Master-Thesis/Code')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "87b0f714",
    "metadata": {
     "execution": {
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "8491cbe1",
    "metadata": {
     "execution": {
@@ -177,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "af8cb5ed",
    "metadata": {
     "execution": {
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "a6594040",
    "metadata": {
     "execution": {
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ee9e0626",
    "metadata": {
     "execution": {
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "479bc02b",
    "metadata": {
     "execution": {
@@ -336,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "0a1c17c5",
    "metadata": {
     "execution": {
