--- a/Code/12_pre_data_statistics.ipynb
+++ b/Code/12_pre_data_statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "7ce315ab",
    "metadata": {
     "execution": {
@@ -36,15 +36,19 @@
     "import sqlite3                      # For connecting to SQL database\n",
     "import matplotlib.pyplot as plt     # For plotting graphs\n",
     "import seaborn as sns               # For plotting\n",
+    "import os\n",
     "\n",
     "### Ignoring the warnings\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "### Setting working directory\n",
+    "os.chdir('/Users/emilwilliamhansen/Desktop/Master-Thesis/Code')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "3204262e",
    "metadata": {
     "execution": {
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "460ba035",
    "metadata": {
     "execution": {
@@ -266,7 +270,7 @@
        "BAB          37.97%  -22.28%  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "81f53e28",
    "metadata": {
     "papermill": {
@@ -339,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "4831c4bc",
    "metadata": {
     "papermill": {
@@ -360,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "2478b387",
    "metadata": {
     "papermill": {
@@ -403,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "ead2ae57",
    "metadata": {
     "papermill": {
@@ -472,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "2fbe6ac1",
    "metadata": {
     "papermill": {
@@ -521,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "d2719708",
    "metadata": {
     "papermill": {
@@ -568,67 +572,6 @@
     "plt.savefig('Plots/corrmatrix.png')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "d6a78348",
-   "metadata": {
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "pending"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'drawdown' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mticker\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmtick\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Define factors (assuming the DataFrame's columns are in the order: VW, EW, SMB, HML, UMD, BAB)\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m factors \u001b[38;5;241m=\u001b[39m \u001b[43mdrawdown\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mtolist()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Get default colors from matplotlib (same as your histograms)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m colors \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mrcParams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maxes.prop_cycle\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mby_key()[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'drawdown' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import matplotlib.ticker as mtick\n",
-    "\n",
-    "# Define factors (assuming the DataFrame's columns are in the order: VW, EW, SMB, HML, UMD, BAB)\n",
-    "factors = drawdown.columns.tolist()\n",
-    "\n",
-    "# Get default colors from matplotlib (same as your histograms)\n",
-    "colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
-    "\n",
-    "# Step 4: Create 6 plots in a 2x3 grid\n",
-    "fig, axes = plt.subplots(2, 3, figsize=(16, 10))\n",
-    "axes = axes.flatten()\n",
-    "\n",
-    "for i, (factor, color) in enumerate(zip(factors, colors)):\n",
-    "    ax = axes[i]\n",
-    "    ax.plot(drawdown.index, drawdown[factor], color=color, label=factor)\n",
-    "    ax.set_title(factor)\n",
-    "    ax.set_ylabel('Drawdown')\n",
-    "    ax.set_facecolor('white')\n",
-    "    ax.yaxis.set_major_formatter(mtick.PercentFormatter(1.0))\n",
-    "    \n",
-    "plt.tight_layout()\n",
-    "plt.savefig('Plots/max_drawdowns.png')\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "223f7af2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
