--- a/Code/02_data_indecies.ipynb
+++ b/Code/02_data_indecies.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "0e448fdf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:06.801209Z",
-     "iopub.status.busy": "2025-03-04T15:20:06.801036Z",
-     "iopub.status.idle": "2025-03-04T15:20:07.188170Z",
-     "shell.execute_reply": "2025-03-04T15:20:07.187873Z"
+     "iopub.execute_input": "2025-03-13T16:20:26.123644Z",
+     "iopub.status.busy": "2025-03-13T16:20:26.123088Z",
+     "iopub.status.idle": "2025-03-13T16:20:26.535556Z",
+     "shell.execute_reply": "2025-03-13T16:20:26.535247Z"
     },
     "papermill": {
-     "duration": 0.389969,
-     "end_time": "2025-03-04T15:20:07.189079",
+     "duration": 0.417508,
+     "end_time": "2025-03-13T16:20:26.536458",
      "exception": false,
-     "start_time": "2025-03-04T15:20:06.799110",
+     "start_time": "2025-03-13T16:20:26.118950",
      "status": "completed"
     },
     "tags": []
@@ -46,25 +46,25 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "### Setting working directory\n",
-    "os.chdir('/Users/emilwilliamhansen/Library/Mobile Documents/com~apple~CloudDocs/School/Master Thesis/Code')"
+    "os.chdir('/Users/emilwilliamhansen/Desktop/Master-Thesis/Code')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "81da50b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:07.191475Z",
-     "iopub.status.busy": "2025-03-04T15:20:07.191305Z",
-     "iopub.status.idle": "2025-03-04T15:20:07.294996Z",
-     "shell.execute_reply": "2025-03-04T15:20:07.294721Z"
+     "iopub.execute_input": "2025-03-13T16:20:26.539154Z",
+     "iopub.status.busy": "2025-03-13T16:20:26.538985Z",
+     "iopub.status.idle": "2025-03-13T16:20:26.637443Z",
+     "shell.execute_reply": "2025-03-13T16:20:26.637187Z"
     },
     "papermill": {
-     "duration": 0.105571,
-     "end_time": "2025-03-04T15:20:07.295736",
+     "duration": 0.10038,
+     "end_time": "2025-03-13T16:20:26.638143",
      "exception": false,
-     "start_time": "2025-03-04T15:20:07.190165",
+     "start_time": "2025-03-13T16:20:26.537763",
      "status": "completed"
     },
     "tags": []
@@ -209,7 +209,7 @@
        "[267971 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,20 +238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "05f65927",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:07.298211Z",
-     "iopub.status.busy": "2025-03-04T15:20:07.297996Z",
-     "iopub.status.idle": "2025-03-04T15:20:07.306016Z",
-     "shell.execute_reply": "2025-03-04T15:20:07.305776Z"
+     "iopub.execute_input": "2025-03-13T16:20:26.640358Z",
+     "iopub.status.busy": "2025-03-13T16:20:26.640235Z",
+     "iopub.status.idle": "2025-03-13T16:20:26.648022Z",
+     "shell.execute_reply": "2025-03-13T16:20:26.647794Z"
     },
     "papermill": {
-     "duration": 0.00985,
-     "end_time": "2025-03-04T15:20:07.306665",
+     "duration": 0.009446,
+     "end_time": "2025-03-13T16:20:26.648641",
      "exception": false,
-     "start_time": "2025-03-04T15:20:07.296815",
+     "start_time": "2025-03-13T16:20:26.639195",
      "status": "completed"
     },
     "tags": []
@@ -272,20 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "d2bc5c19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:07.308433Z",
-     "iopub.status.busy": "2025-03-04T15:20:07.308329Z",
-     "iopub.status.idle": "2025-03-04T15:20:07.862163Z",
-     "shell.execute_reply": "2025-03-04T15:20:07.861899Z"
+     "iopub.execute_input": "2025-03-13T16:20:26.650388Z",
+     "iopub.status.busy": "2025-03-13T16:20:26.650285Z",
+     "iopub.status.idle": "2025-03-13T16:20:27.179556Z",
+     "shell.execute_reply": "2025-03-13T16:20:27.179268Z"
     },
     "papermill": {
-     "duration": 0.555622,
-     "end_time": "2025-03-04T15:20:07.863015",
+     "duration": 0.531022,
+     "end_time": "2025-03-13T16:20:27.180393",
      "exception": false,
-     "start_time": "2025-03-04T15:20:07.307393",
+     "start_time": "2025-03-13T16:20:26.649371",
      "status": "completed"
     },
     "tags": []
@@ -347,14 +347,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2.015652,
-   "end_time": "2025-03-04T15:20:08.080774",
+   "duration": 1.829624,
+   "end_time": "2025-03-13T16:20:27.397803",
    "environment_variables": {},
    "exception": null,
    "input_path": "02_data_indecies.ipynb",
    "output_path": "02_data_indecies.ipynb",
    "parameters": {},
-   "start_time": "2025-03-04T15:20:06.065122",
+   "start_time": "2025-03-13T16:20:25.568179",
    "version": "2.6.0"
   }
  },
